Made position of social media bar fixed to solve problem on iPhones

--- a/web/style/index.css
+++ b/web/style/index.css
@@ -76,7 +76,7 @@ nav a {
 
 #socialMediaBar {
     background-color: white;
-    position: absolute;
+    position: fixed;
     top: 95%;
     width: 100%;
     height: 5%;
